# MemoryManager

./: .gitignore  CMakeLists.txt  IMemoryAllocator.h  MemoryBlock.h  SegmentedFreeListAllocator.h  main.cpp
tests/: SegmentedFreeListAllocatorTest.cpp
